# taicol-api-2021

./: .gitignore  Dockerfile  Makefile  README.md  apiary.apib  docker-compose.yml  dotenv.example  production.yml  pyproject.toml  requirements.txt  staging.yml
api/: apps.py  tests.py  utils.py  utils_for_usage.py  views.py
api/services/: _00_update_usage_check.py  _01_update_ref.py  _02_update_name.py  _03_update_solr.py  _04_generate_checklist.py  variants_for_checklist.csv
api/services/utils/: checklist.py  common.py
api/update/: _01_update_ref.py  _02_update_name.py  _03_update_solr.py  utils.py
api/views/: __init__.py  _base.py  admin.py  higher_taxa.py  misc.py  name.py  name_match.py  reference.py  taxon.py
conf/: settings.py  urls.py
scripts/: custom_nginx.conf  docker-entry.sh  generate-name-match-source.sql  generate-taxonID.py  generate_taxa_for_tbia.py  generate_taxonID_new.py  get_conservation_info.py  get_conservation_info_new.py  get_links_new.py  nginx-django.conf  start  update_links.py  update_name_author.py  update_species_id.py  update_taxon.py  update_web_stat.py
scripts/final/: generate-taxonID.py  generate_web_stat.py  prepare_conservation_data.py  prepare_links_data.py
scripts/nginx/production/: production.conf
scripts/nginx/staging/: staging.conf
